# comparch-simproject-skeletons

./: .gitignore  NOTES.md  README.md  SConscript  SConstruct  build.py
def/: debug.param.def  io.param.def  memory.param.def  memory.stat.def  ramulator.param.def
src/: bonsai_mt.cc  bonsai_mt.h  counter_mode.cc  counter_mode.h  data_mac.cc  data_mac.h  dram.cc  dram.h  dram_ctrl.cc  dram_ctrl.h  dram_dramsim3.cc  dram_dramsim3.h  dram_ramulator.cc  dram_ramulator.h  encryption.cc  encryption.h  exec.cc  global_defs.h  integrity_tree.cc  integrity_tree.h  knob.cc  knob.h  macsim.cc  macsim.h  mee.cc  mee.h  memory.cc  memreq_info.cc  memreq_info.h  mmu.cc  mmu.h  ramulator_wrapper.cc  ramulator_wrapper.h  tlb.cc  tlb.h  toc_mt.cc  toc_mt.h  uop.h
src/ramulator/: .gitignore  CMakeLists.txt
src/ramulator/src/: CMakeLists.txt  Controller.h  Processor.cpp  Request.h
stats/data_extract/: extractor.py
tools/x86_trace_generator/: annotations.h  annotations_c.h  extract_method1.sh  extract_method2.sh  makefile.rules  memtest  mergesort_sample  run.py  trace_ext_spec17.sh  trace_generator.cpp
